--- a/templates/chat.html
+++ b/templates/chat.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Same, Kansas</title>
     <style>
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -80,6 +81,7 @@
         #messages div {
             margin-bottom: 15px;
             transform: rotate(calc(var(--rotation, 0deg)));
+            font-size: 1.1rem; /* Adjust the font size of chat messages */
         }
 
         #helptext {
@@ -89,10 +91,10 @@
             transform: rotate(87deg) translateY(-50%);
             transform-origin: center;
             color: #5df542;
-            font-size: 1.1rem; /* Decreased font size */
+            font-size: .9rem; /* Decreased font size */
             font-weight: bold;
             white-space: nowrap;
-            z-index: 1;
+            z-index: 10;
         }
 
         #input-area {
@@ -108,6 +110,7 @@
             box-sizing: border-box;
             height: auto; /* Fix height to prevent hanging off the bottom */
             position: relative; /* Ensure it stays within the viewport */
+            font-size:.9rem;
         }
 
         #message {
@@ -120,7 +123,7 @@
             color: #000;
             transform: skewY(-2deg) rotateZ(-1deg);
             box-sizing: border-box;
-            font-size: 1.1rem; /* Decreased font size */
+            font-size: 1rem; /* Decreased font size */
         }
 
         #input-area button {
@@ -187,7 +190,12 @@
         }
 
         /* Media queries for responsive design */
-        @media (max-width: 600px) {
+        @media only screen 
+          and (max-width: 600px), /* General mobile devices */
+          and (max-device-width: 768px) /* iPads and tablets */
+          and (-webkit-min-device-pixel-ratio: 2), /* High DPI screens */
+          and (orientation: portrait) /* Portrait mode */
+            {
             body {
                 font-size: 1rem; /* Adjust the base font size */
             }
@@ -226,6 +234,7 @@
                 padding: 10px 5px;
             }
         }
+    
     </style>
 </head>
 <body>
@@ -450,7 +459,7 @@
                 updateTextareaMessage();
 
                 // Display the initial message from SK
-                const firstMsg = "/// /// //|///// *wind through grass* /// //// ///||//"
+                const firstMsg = "/// /// /////// *breeze through grass* /// //// ///|//"
                 msgArea.innerHTML += "<div><strong>SK:</strong>"+firstMsg+"</div>";
                 //messageHistory.push({ user: 'SK', text: firstMsg });
 
