--- a/templates/chat.html
+++ b/templates/chat.html
@@ -253,8 +253,11 @@
             <p>If you are here, it is most likely because you survived INSIDE THE CASTLE 2 (REVENGE OF THE CASTLE FREAK)</p>
             <p>Now is your reward.<p>
             <p>This page is a murkily multiplayer Kansas.</p>
-            <p>It presents an opportunity for collaborative writing.</p>
-            <p>To interact with this page, you must agree that what you write can be published by Inside the Castle (Lawrence, Kansas).</p>
+            <p>It presents an opportunity for collaborative writing</p>
+            <p>via individual read/write access to an entangled meta-dimension.<p>
+            <p>Spatio-logical clashes are not guaranteed to resolve.<p>
+            <br>
+            <p>To interact with this page, you must *agree* that what you write can be published by Inside the Castle (Lawrence, Kansas).</p>
             <br>
             <p>Do you agree?<p>
             <label>
@@ -472,7 +475,7 @@
                     [50*1000, "others will enjoy later"],
                     [50*1000, ", artificer"],
                     [20*1000, "different later"],
-                    [90*1000, "or non-homologous nows"],
+                    [90*1000, "or non-isomorphic nows"],
                     [40*1000, "different others"],
                     [50*1000, "same here"],
                     [120*1000, "a multi-user swatch of same Canvas"],
